use entity path for sorting